# kubedantic

./: .gitignore  LICENSE  NEWS.rst  README.md  README.rst  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  tox.ini
.github/workflows/: main.yml
docs/: index.rst
generator/: main.py
generator/generator/: extractor.py  parser.py
generator/tests/: conftest.py  test_extractor.py  test_main.py  test_parser.py
generator/tests/data/extractor/: apis__apps__v1_openapi.json  apis__batch__v1_openapi.json  releases.json  specs.json
generator/tests/data/extractor/expected/: v1_30_0.json
generator/tests/data/parser/expected/io/k8s/api/apps/: v1.py
generator/tests/data/parser/expected/io/k8s/api/autoscaling/: v1.py
generator/tests/data/parser/expected/io/k8s/api/batch/: v1.py
generator/tests/data/parser/expected/io/k8s/api/core/: v1.py
src/kubedantic/: extractor.py  main.py  parser.py
src/kubedantic/models/io/k8s/api/admissionregistration/: v1.py  v1alpha1.py  v1beta1.py
src/kubedantic/models/io/k8s/api/apps/: v1.py
src/kubedantic/models/io/k8s/api/authentication/: v1.py  v1alpha1.py  v1beta1.py
src/kubedantic/models/io/k8s/api/authorization/: v1.py
src/kubedantic/models/io/k8s/api/autoscaling/: v1.py  v2.py
src/kubedantic/models/io/k8s/api/batch/: v1.py
src/kubedantic/models/io/k8s/api/certificates/: v1.py  v1alpha1.py
src/kubedantic/models/io/k8s/api/coordination/: v1.py
src/kubedantic/models/io/k8s/api/core/: v1.py
src/kubedantic/models/io/k8s/api/discovery/: v1.py
src/kubedantic/models/io/k8s/api/events/: v1.py
src/kubedantic/models/io/k8s/api/flowcontrol/: v1.py  v1beta3.py
src/kubedantic/models/io/k8s/api/networking/: v1.py  v1alpha1.py
src/kubedantic/models/io/k8s/api/node/: v1.py
src/kubedantic/models/io/k8s/api/policy/: v1.py
src/kubedantic/models/io/k8s/api/rbac/: v1.py
src/kubedantic/models/io/k8s/api/scheduling/: v1.py
src/kubedantic/models/io/k8s/api/storage/: v1.py  v1alpha1.py
src/kubedantic/models/io/k8s/apimachinery/pkg/: runtime.py
tests/: test_extractor.py  test_main.py  test_models.py  test_parser.py
tests/data/extractor/expected/: crd.json  k8s.json
tests/data/extractor/openapi_v3/: paths.json
tests/data/extractor/openapi_v3/api/: v1.json
tests/data/extractor/openapi_v3/apis/batch/: v1.json
tests/data/extractor/openapi_v3/apis/security.istio.io/: v1.json  v1beta1.json
tests/data/extractor/openapi_v3/apis/unsupported/: v1.json
tests/data/parser/expected/crd/io/istio/security/: v1.py  v1beta1.py
(+9 files in other folders)
