[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=3.4.1"]
build-backend = "setuptools.build_meta"

[project]
name = "kubedantic"
authors = [
	{ name = "Thiago Pena", email = "thiagopena01@gmail.com" },
	{ name = "Diogo Baeder", email = "diogobaeder@yahoo.com.br" },
]
description = "Kubedantic - Pydantic models for Kubernetes"
readme = "README.rst"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.8"
dependencies = [
	"pydantic >= 2",
]
dynamic = ["version"]

[project.optional-dependencies]
testing = [
	# upstream
	"pytest >= 6, != 8.1.*",
	"pytest-checkdocs >= 2.4",
	"pytest-cov",
	"pytest-mypy",
	"pytest-enabler >= 2.2",
	"pytest-ruff >= 0.2.1",
	"freezegun >= 1.5.0",

	# local
]
docs = [
	# upstream
	"sphinx >= 3.5",
	"jaraco.packaging >= 9.3",
	"rst.linker >= 1.9",
	"furo",
	"sphinx-lint",

	# local
]
generator = [
	# upstream
	"datamodel-code-generator >= 0.25.5",
	"requests >= 2.31.0",

	# local
]

[project.urls]
Homepage = "https://github.com/coherent-oss/kubedantic"

[project.scripts]

[tool.setuptools_scm]
